--- a/src/qt/res/themes/Conflict/styles.qss
+++ b/src/qt/res/themes/Conflict/styles.qss
@@ -43,14 +43,14 @@
 
 /* Dialogs */
 QDialog, QTableView{
-	border-image: none
+	border-image: url($themes-dir/Conflict/graytrans.png);
      font-size: 14px;
 }
 #CoinControlDialog, #AskPassphraseDialog, #AboutDialog, #RPCConsole{
-	border-image: none
+	border-image: url($themes-dir/Conflict/blacktrans.png);
      font-size: 14px;
 }
-Coin Image 
+/* Coin Image */
 #label_2 {
 	qproperty-pixmap: url($themes-dir/Conflict/payconRed.png);
 	/*padding-bottom: 100px*/
@@ -105,13 +105,12 @@ QValidatedLineEdit[error="true"], QDoubleSpinBox[error="true"] {
 
 /* Balance frame */
 QFrame#frame {
-	border-image: url($themes-dir/Conflict/blacktrans.png);
+	border-image: none
 }
 
 /* Recent transactions frame */
 QFrame#frame_2 {
-	border-image: url($themes-dir/Conflict/blacktrans.png);
-}
+	border-image: none
 #listTransactions{
 color: $accent-color;
 }
