--- a/src/qt/res/themes/Crypto-city/styles.qss
+++ b/src/qt/res/themes/Crypto-city/styles.qss
@@ -1,5 +1,5 @@
 /**
- * ComicCON Qt Theme - v1.0
+ * Crypto-city Qt Theme - v1.0
  * Created: 22/2/2015
  * Author: dcgirl (using examples by tepelstreeltje and Zeewolf) 
  * Edited By: CryptoTech
@@ -101,7 +101,7 @@ QWidget#ChatWindowClass QLabel#label_12{
 
 /*Chat Page Background*/
 QWidget#widget_2{
-	background-image: url($themes-dir/ComicCON/whitetrans2.png);
+        background-image: url($themes-dir/Crypto-city/whitetrans2.png);
 	background-repeat: no-repeat;
 }
 /*Block Browser Background*/
@@ -121,13 +121,13 @@ QWidget#layoutWidget_2 QLineEdit{
 	color: #000000;
 }
 QFrame#gridFrame_2 {
-	border-image: url($themes-dir/ComicCON/whitetrans.png);
+        border-image: url($themes-dir/Crypto-city/whitetrans.png);
 	padding: 10px 20px;
 }
 
 /* Overview */
  QMainWindow {
-	border-image: url($themes-dir/ComicCON/comic1.png);
+        border-image: url($themes-dir/Crypto-city/Cc.png);
 	background: transparent;
 }
 
@@ -149,7 +149,7 @@ QWidget{
 }
 /* Coin Image */
 #label_2 {
-	qproperty-pixmap: url($themes-dir/ComicCON/payconT.png);
+        qproperty-pixmap: url($themes-dir/Crypto-city/payconT.png);
 }
 
 /* Frames */
@@ -325,16 +325,16 @@ QComboBox::drop-down:disabled {
 
 QComboBox::down-arrow {
 	/* Custom dropdown symbol */
-	image: url($themes-dir/ComicCON/down-arrow.png);
+        image: url($themes-dir/Crypto-city/down-arrow.png);
 }
 
 QComboBox::down-arrow:disabled {
-	image: url($themes-dir/ComicCON/down-arrow-disabled.png);
+        image: url($themes-dir/Crypto-city/down-arrow-disabled.png);
 }
 
 QComboBox::down-arrow:on {
 	/* Custom dropdown symbol */
-	image: url($themes-dir/ComicCON/up-arrow.png);
+        image: url($themes-dir/Crypto-city/up-arrow.png);
 }
 
 QComboBox::drop-down {
@@ -372,11 +372,11 @@ QDateTimeEdit:disabled, QSpinBox:disabled, QDoubleSpinBox:disabled {
 }
 
 QDateTimeEdit::down-arrow {
-	image: url($themes-dir/ComicCON/calendar.png);
+        image: url($themes-dir/Crypto-city/calendar.png);
 }
 
 QDateTimeEdit::down-arrow:disabled {
-	image: url($themes-dir/ComicCON/calendar-disabled.png);
+        image: url($themes-dir/Crypto-city/calendar-disabled.png);
 }
 
 QDateTimeEdit::drop-down {
@@ -384,11 +384,11 @@ QDateTimeEdit::drop-down {
 }
 
 QDoubleSpinBox::down-button {
-	image: url($themes-dir/ComicCON/down-arrow.png);
+        image: url($themes-dir/Crypto-city/down-arrow.png);
 }
 
 QDoubleSpinBox::up-button {
-	image: url($themes-dir/ComicCON/up-arrow.png);
+        image: url($themes-dir/Crypto-city/up-arrow.png);
 }
 
 /* Button */
@@ -450,7 +450,7 @@ QToolButton:disabled {
 	border:2px dotted #aaa;
 }
 #qt_toolbar_ext_button {
-	qproperty-icon:url($themes-dir/ComicCON/down1.png);
+        qproperty-icon:url($themes-dir/Crypto-city/down1.png);
 	min-width:22px;
 	max-height:20px;
 	border:none;
@@ -604,35 +604,35 @@ QCheckBox::indicator {
 }
 
 QCheckBox::indicator:unchecked {
-	image: url($themes-dir/ComicCON/cb.png);
+        image: url($themes-dir/Crypto-city/cb.png);
 }
 
 QCheckBox::indicator:unchecked:hover {
-	image: url($themes-dir/ComicCON/cb-hover.png);
+        image: url($themes-dir/Crypto-city/cb-hover.png);
 }
 
 QCheckBox::indicator:unchecked:pressed {
-	/*image: url($themes-dir/ComicCON/checkbox_unchecked_pressed.png);*/
+        /*image: url($themes-dir/Crypto-city/checkbox_unchecked_pressed.png);*/
 }
 
 QCheckBox::indicator:checked {
-	image: url($themes-dir/ComicCON/cb-checked.png);
+        image: url($themes-dir/Crypto-city/cb-checked.png);
 }
 
 QCheckBox::indicator:checked:hover {
-	image: url($themes-dir/ComicCON/cb-checked-hover.png);
+        image: url($themes-dir/Crypto-city/cb-checked-hover.png);
 }
 
 QCheckBox::indicator:checked:pressed {
-	/*image: url($themes-dir/ComicCON/checkbox_checked_pressed.png);*/
+        /*image: url($themes-dir/Crypto-city/checkbox_checked_pressed.png);*/
 }
 
 QCheckBox::indicator:indeterminate:hover {
-	/*image: url($themes-dir/ComicCON/checkbox_indeterminate_hover.png);*/
+        /*image: url($themes-dir/Crypto-city/checkbox_indeterminate_hover.png);*/
 }
 
 QCheckBox::indicator:indeterminate:pressed {
-	/*image: url($themes-dir/ComicCON/checkbox_indeterminate_pressed.png);*/
+        /*image: url($themes-dir/Crypto-city/checkbox_indeterminate_pressed.png);*/
 }
 
 /* Radio button */
@@ -646,27 +646,27 @@ QRadioButton::indicator {
 }
 
 QRadioButton::indicator::unchecked {
-	image: url($themes-dir/ComicCON/r.png);
+        image: url($themes-dir/Crypto-city/r.png);
 }
 
 QRadioButton::indicator:unchecked:hover {
-	image: url($themes-dir/ComicCON/r-hover.png);
+        image: url($themes-dir/Crypto-city/r-hover.png);
 }
 
 QRadioButton::indicator:unchecked:pressed {
-	/*image: url($themes-dir/ComicCON/rpressed.png);*/
+        /*image: url($themes-dir/Crypto-city/rpressed.png);*/
 }
 
 QRadioButton::indicator::checked {
-	image: url($themes-dir/ComicCON/r-checked.png);
+        image: url($themes-dir/Crypto-city/r-checked.png);
 }
 
 QRadioButton::indicator:checked:hover {
-	image: url($themes-dir/ComicCON/r-checked-hover.png);
+        image: url($themes-dir/Crypto-city/r-checked-hover.png);
 }
 
 QRadioButton::indicator:checked:pressed {
-	/*image: url($themes-dir/ComicCON/radiobutton_checked_pressed.png);*/
+        /*image: url($themes-dir/Crypto-city/radiobutton_checked_pressed.png);*/
 }
 
 /* Tabs */
@@ -758,7 +758,7 @@ QCalendarWidget QAbstractItemView:disabled { color: $main-color-xd }
 
 /* Window resize grip */
 QSizeGrip {
-	image: url($themes-dir/ComicCON/sizegrip.png);
+        image: url($themes-dir/Crypto-city/sizegrip.png);
 	width: 16px;
 	height: 16px;
 }
